--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -84,7 +84,7 @@
   &__title-block{
     position: absolute;
     left: 45%;
-    right: 100%;
+    width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
