--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,9 +12,10 @@
   display: flex;
   flex-direction: column;
   min-height: 200px;
-  background: white;
   padding: 2rem;
   width: 100%;
+  max-width: 1700px;
+  margin: 0 auto;
   h1{
     font-size: 32px;
     font-weight: bold;
