--- a/assets/scss/_folio.scss
+++ b/assets/scss/_folio.scss
@@ -4,8 +4,10 @@
   }
   .folio-image{
     width: 100%;
+    height: 100%;
     border-radius: 1rem;
     cursor: pointer;
+    background: white;
   }
 }
 .folio-section{
