--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -111,10 +111,12 @@ a {
 
 .container,
 .container-100 {
-  .row {
-    margin-right: calc(-1 * var(--grid-row-gap));
-    margin-left: calc(-1 * var(--grid-row-gap));
-  }
+
+}
+
+.row {
+  margin-right: calc(-1 * var(--grid-row-gap));
+  margin-left: calc(-1 * var(--grid-row-gap));
 }
 
 .row {
@@ -264,4 +266,8 @@ a {
 }
 .height-100{
   height: 100%;
+}
+
+.text-center{
+  text-align: center;
 }
