--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -50,6 +50,7 @@
   }
 }
 
+
 @media (min-width: 576px) {
   .product-presentation{
     img{
@@ -90,12 +91,17 @@
     display: flex;
     align-items: center;
     h1 {
-      font-size: 4em;
+      font-size: 2em;
       line-height: 1em;
+    }
+    @media (min-width: 1200px) {
+      h1{
+        font-size: 4rem;
+      }
     }
   }
   img{
-    margin-top: -1rem;
-    margin-bottom: -1rem;
+    margin-top: -3rem;
+    margin-bottom: -2rem;
   }
 }
